--- a/TrainingPractico1/app/src/main/res/layout/activity_main.xml
+++ b/TrainingPractico1/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtSearch"
         android:hint="@string/txt_search_hint"
+        android:imeOptions="actionSearch"
         android:layout_weight="1"
         android:singleLine="true" />
 
@@ -18,5 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_search"
+
         android:id="@+id/btnSearch" />
 </LinearLayout>
