--- a/TrainingPractico1/app/src/main/res/layout-land/row_item.xml
+++ b/TrainingPractico1/app/src/main/res/layout-land/row_item.xml
@@ -1,56 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/activity_vertical_margin"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:divider="?android:dividerHorizontal"
-    android:showDividers="end">
+    android:padding="@dimen/activity_vertical_margin" >
 
     <TextView
+        android:id="@+id/txtTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
-        android:id="@+id/txtTitle"
-        android:singleLine="true"
-        android:gravity="center"
         android:layout_marginBottom="@dimen/txt_vertical_margin"
-        android:layout_weight="1"/>
+        android:gravity="center"
+        android:text="Title" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    <ImageView
+        android:id="@+id/thumbnailView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTitle"
+        android:layout_marginLeft="@dimen/txt_vertical_margin"
+        android:minHeight="30dp"
+        android:minWidth="30dp"
+        android:scaleType="fitCenter" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="subtitle"
-            android:paddingBottom="@dimen/txt_vertical_margin"
-            android:layout_weight="1"
-            android:id="@+id/txtSubtitle" />
+    <TextView
+        android:id="@+id/txtSubtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/txt_vertical_margin"
+        android:text="subtitle"
+        android:layout_toRightOf="@id/thumbnailView"
+        android:layout_below="@id/txtTitle"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+    <TextView
+        android:id="@+id/txtStock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:layout_below="@id/txtSubtitle"
+        android:layout_toRightOf="@id/thumbnailView"
+        android:text="Stock" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stock"
-                android:singleLine="true"
-                android:id="@+id/txtStock" />
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:singleLine="true"
+        android:text="Price"
+        android:layout_below="@id/txtStock" />
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Price"
-                android:id="@+id/txtPrice"
-                android:gravity="right"
-                android:singleLine="true"
-                android:layout_weight="1"/>
 
-        </LinearLayout>
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
