--- a/TrainingPractico1/app/src/main/res/layout/row_item.xml
+++ b/TrainingPractico1/app/src/main/res/layout/row_item.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/activity_vertical_margin"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:divider="?android:dividerHorizontal"
-    android:showDividers="end">
+    android:padding="@dimen/activity_vertical_margin" >
 
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Title"
         android:id="@+id/txtTitle"
-        android:singleLine="true"
-        android:gravity="center"
-        android:layout_marginBottom="@dimen/txt_vertical_margin"
-        android:layout_weight="1"/>
-
-    <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Price"
-        android:id="@+id/txtPrice"
-        android:gravity="right"
-        android:singleLine="true"
-        android:layout_weight="1"/>
+        android:layout_marginBottom="@dimen/txt_vertical_margin"
+        android:gravity="center"
+        android:text="Title" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/thumbnailView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtTitle"
+        android:layout_marginLeft="@dimen/txt_vertical_margin"
+        android:minHeight="30dp"
+        android:minWidth="30dp"
+        android:scaleType="fitCenter" />
+
+    <TextView
+        android:id="@+id/txtPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:layout_alignParentRight="true"
+        android:layout_alignBaseline="@id/thumbnailView"
+        android:singleLine="true"
+        android:text="Price"
+        android:layout_below="@id/txtTitle" />
+
+
+</RelativeLayout>
